# enterprise-workflow-env

./: .gitignore  LICENSE  README (1).md  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt  run.sh
agent/: baseline.py  retry_utils.py  skills.py  trajectory.py
app/: environment.py  grader.py  main.py  mock_backend.py  models.py
server/: main.py
tests/: .debug_inference.py.swp  debug_inference.py  final_validation.py  test_with_mock.py
