[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "enterprise-workflow-env"
version = "0.1.0"
description = "Enterprise Workflow OpenEnv for AI agent training"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "agent*", "tasks*"]
